3. Show icons for custom actions in now playing context menu.
4. Show hover actions for tracks of multi-disc albums shown as one allbum.
5. Don't split tracks into discs when showing search results.
6. When scrolling input fields into view check if field is in a list item and if
   so scroll the item into view.
7. Make only text area of list subtitle clickable.

1.8.8
-----
1. Use pulsing, instead of spinning, icon for active tasks.
2. If encounter an invalid time when calculating queue duration, just ask LMS.
3. Queue item durations are floating point, so handle correctly.
4. Fix subtoolbar single line alignment.
5. Don't set mixer volume when changing players.
6. Move 'Zap' next to remove actions.
7. Only show 'Zap' if custom skip plugin enabled.
8. Fix broken add/play all.

1.8.7
-----
1. Also set 'caret-color' to active colour when indicating playlist name already
   exists.
2. Open browse and queue menus on right-click.
3. Allow to hide 'Default player' setting via passing 'defplayer' to 'hide' url
   query parameter.
4. Map some new Spotty icons.
5. Fix controlling volume with mousewheel.
6. Add 'libray_id' to custom browse commands.
7. Reduce CPU usage by not using v-progress-circular in toolbar or 'Information'
   dialog.
6. If more than 6 genres chosen in 'Random Mix' dialog, then just show the first
   5 with a "(+X others)" label.
7. Map random play icon in favourites.
8. Add 'Go to artist' and 'Go to album' to search results menus.

1.8.6
-----
 1. Translation updates.
 2. Spelling fixes.
 3. Ignore repeated keypresses less than 100ms apart.
 4. Map icon for Sprocket plugin.
 5. When mapping icons and looking if image ends with a value also check for
    value + '/image.png'
 6. Fix mapping of mysqueezebox.com apps when using local LMS image proxy.
 7. Close track information dialog on 'esc' or back button.
 8. Update rating display if current setting, or calculated value, differs from
    previous.