@@ -1520,10 +1520,6 @@ div.v-subheader {
  font-weight:var(--bold-weight);
 }
 
-.v-list__tile__title a:hover, .v-list__tile__sub-title a:hover, .clickable:hover {
- text-decoration:underline;
-}
-
 .lib-name {
  margin-left:4px;
 }
